# template-fast-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: dependencies.py  main.py
app/database/: models.py  session.py
app/repositories/: user.py
app/routers/: auth.py  user.py
app/schemas/: user.py
app/services/: auth.py  user.py
